--- a/i3/.i3/i3blocks.conf
+++ b/i3/.i3/i3blocks.conf
@@ -29,7 +29,12 @@ separator_block_width=20
 markup=none
 separator=false
 
-#
+[music-player]
+signal=12
+interval=600
+command=~/.i3/dmus-current-track.sh ~/work/dmenu-music-player/start-dmus
+
+# Check for updates.
 [updates]
 label= 
 signal=10
@@ -58,6 +63,7 @@ instance=/mnt/
 label=
 command=~/.i3/mem-info.sh
 interval=8
+
 # CPU usage
 #
 # The script may be called with -w and -c switches to specify thresholds,
