--- a/i3/.i3/i3blocks.conf
+++ b/i3/.i3/i3blocks.conf
@@ -36,7 +36,7 @@ command=~/.i3/dmus-current-track.sh ~/work/dmenu-music-player/start-dmus
 
 # Check for updates.
 [updates]
-label= 
+label=
 signal=10
 command=~/.i3/package-checker.sh
 interval=3600
@@ -57,6 +57,7 @@ command=~/.i3/wifi.sh
 label=
 interval=1
 instance=/mnt/
+command=~/.i3/disk.sh
 
 # Displays song played by my music player.
 [mem-exp]
@@ -92,7 +93,7 @@ label=
 instance=Master
 interval=15
 signal=12
-command=/usr/lib/i3blocks/volume 5 
+command=~/.i3/volume.sh 5
 
 # TODO:
 # Key indicators
