--- a/i3/.i3/i3blocks.conf
+++ b/i3/.i3/i3blocks.conf
@@ -25,24 +25,19 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 command=/usr/lib/i3blocks/$BLOCK_NAME
-separator_block_width=20
-markup=none
+separator_block_width=25
+markup=pango
 separator=false
-
-[music-player]
-signal=12
-interval=600
-command=~/.i3/dmus-current-track.sh ~/work/dmenu-music-player/start-dmus
 
 # Check for updates.
 [updates]
-label=
+label=[]
 signal=10
 command=~/.i3/package-checker.sh
 interval=3600
 
 [wifi]
-label=
+label=[]
 interval=10
 command=~/.i3/wifi.sh
 
@@ -54,14 +49,14 @@ command=~/.i3/wifi.sh
 # (defaults to 10 for 10%).
 ## -----------------------------
 [disk]
-label=
+label=[]
 interval=1
 instance=/mnt/
 command=~/.i3/disk.sh
 
 # Displays song played by my music player.
 [mem-exp]
-label=
+label=[]
 command=~/.i3/mem-info.sh
 interval=8
 
@@ -70,7 +65,7 @@ interval=8
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
 [cpu_usage]
-label=
+label=[]
 #min_width=
 interval=8
 
@@ -80,7 +75,7 @@ interval=8
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
 [temperature]
-label=
+label=[]
 interval=30
 
 # Volume indicator
@@ -89,10 +84,10 @@ interval=30
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-label=
+label=[]
 instance=Master
-interval=15
-signal=12
+interval=60
+signal=10
 command=~/.i3/volume.sh 5
 
 # TODO:
@@ -119,6 +114,6 @@ command=~/.i3/volume.sh 5
 
 # Time
 [time]
-label=
+label=[]
 command=date '+%Y-%m-%d %H:%M '
 interval=30
