--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -36,27 +36,58 @@ bindsym $mod+Shift+q kill
 bindsym $mod+k kill
 
 # start program launcher
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu='dmenu -i -fn fixed -nb "#1E1F1C"'
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu='dmenu -i -fn "DejaVu Sans Mono" -nb "#1E1F1C"'
-bindsym $mod+d exec --no-startup-id /home/mateusz/work/xlib-test/bin/program \
+bindsym $mod+d exec --no-startup-id /home/mateusz/work/aluncher/bin/program  \
         --sb \#47196D                                                        \
         --appluncher                                                         \
-        --appluncher-add GIMP gimp-2.8                                       \
+        --appluncher-add GIMP gimp                                           \
         --appluncher-add XKill xkill                                         \
-        --appluncher-add IntelliJ idea.sh                                    \
-        --appluncher-blacklist "GNU Image Manipulation Program"              \
-        --appluncher-blacklist "IntelliJ IDEA Community Edition"
+        --appluncher-blacklist "GNU Image Manipulation Program"
 
 bindsym $mod+t exec --no-startup-id gnome-system-monitor
 
-################################################################################################
-## sound-section - DO NOT EDIT if you wish to automatically upgrade Alsa -> Pulseaudio later! ##
-################################################################################################
+## Volume control
 
-# All of them update i3blocks icon by sending a signal to it.
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%; exec pkill -SIGRTMIN+12 i3blocks
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%; exec pkill -SIGRTMIN+12 i3blocks
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle; exec pkill -SIGRTMIN+12 i3blocks
+# Path to volume control, without trailing slash
+set $volumepath ~/.i3/i3-volume/volume
+
+# Command for the status line (used with -t, requires -u)
+#   ie: i3blocks, i3status
+set $statuscmd i3blocks
+
+# Signal used to update the status line (used with -u, requires -t)
+#   i3blocks uses SIGRTMIN+10 by default
+#   i3status uses SIGUSR1 by default
+set $statussig SIGRTMIN+10
+
+# Amount to increase/decrease volume as a percentage (used with -i, -d)
+set $volumestep 5
+
+# alsa-utils settings when not using pulseaudio-utils
+#
+# To configure a default card, see https://www.alsa-project.org/main/index.php/Asoundrc
+#
+# Card number to control. (used with -a and -c)
+#   If not specified, i3-volume will let `amixer` use a default.
+#   List cards: aplay -l
+#set $alsacard 1
+
+# Uncomment to use alsa-utils (append "-c $alsacard" without quotes to override default card)
+bindsym XF86AudioRaiseVolume exec ~/.i3/i3-volume/volume -ap -i 5 -t i3blocks -u SIGRTMIN+10
+bindsym XF86AudioLowerVolume exec ~/.i3/i3-volume/volume -ap -d 5 -t i3blocks -u SIGRTMIN+10
+bindsym XF86AudioMute        exec ~/.i3/i3-volume/volume -amp -t i3blocks -u SIGRTMIN+10
+
+# pulseaudio-utils settings when not using alsa-utils
+#
+# Symbolic name for sink (numeric index not supported) (used with -s $sinkname)
+#   Recommended: comment out this setting and omit the -s option to use default sink
+#   List sink names: pacmd list-sinks | awk -F "[<>]" '/^\s+name: <.*>/{print $2}'
+#set $sinkname alsa_output.pci-0000_00_1b.0.analog-stereo
+
+# Using pulseaudio-utils (append "-s $sinkname" without quotes to override default sink)
+#bindsym XF86AudioRaiseVolume exec $volumepath/volume -np -i $volumestep -t $statuscmd -u $statussig
+#bindsym XF86AudioLowerVolume exec $volumepath/volume -np -d $volumestep -t $statuscmd -u $statussig
+#bindsym XF86AudioMute        exec $volumepath/volume -mn -t $statuscmd -u $statussig
 
 # TODO: Mayby change the key later.
 bindsym $mod+Ctrl+m exec i3-sensible-terminal -e 'alsamixer'
@@ -123,20 +154,18 @@ bindsym $mod+a focus parent
 # focus the parent container
 bindsym $mod+z focus child
 
-# TODO: Change dmenu dummy!
-bindsym $mod+m exec ~/work/dmenu-music-player/start-dmus --dmenu-command=~/work/xlib-test/dmenu-dummy
 # Workspace names
 # to display names or symbols instead of plain workspace numbers you can use
 # something like: set $ws1 1:mail
 #                 set $ws2 2:
 set $ws1 "1: "
 set $ws2 "2: "
-set $ws3 "3:  "
-set $ws4 "4:  "
-set $ws5 "5:  "
-set $ws6 "6:  "
-set $ws7 "7:  "
-set $ws8 "8:  "
+set $ws3 "3: "
+set $ws4 "4: "
+set $ws5 "5: "
+set $ws6 "6: "
+set $ws7 "7: "
+set $ws8 "8: "
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -201,6 +230,7 @@ exec --no-startup-id compton --backend glx \
      --glx-no-rebind-pixmap                \
      --glx-swap-method buffer-age          \
      --xrender-sync-fence                  \
+     --no-fading-openclose                 \
      -b
 
 exec --no-startup-id nm-applet
