--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -75,7 +75,7 @@ set $volumestep 5
 ###
 bindsym XF86AudioRaiseVolume exec ~/.i3/vol-setup.sh -ap -i 5 -t i3blocks -u SIGRTMIN+10
 bindsym XF86AudioLowerVolume exec ~/.i3/vol-setup.sh -ap -d 5 -t i3blocks -u SIGRTMIN+10
-bindsym XF86AudioMute        exec ~/.i3/vol-setup.sh -ap -t i3blocks -u SIGRTMIN+10
+bindsym XF86AudioMute        exec ~/.i3/vol-setup.sh -am -t i3blocks -u SIGRTMIN+10
 
 # pulseaudio-utils settings when not using alsa-utils
 #
