--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -22,7 +22,7 @@ hide_edge_borders none
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-# font xft:Noto Sans 10
+# font xft:DejaVu Sans Mono 10
 font pango:DejaVu Sans Mono 10
 
 # Use Mouse+$mod to drag floating windows
@@ -37,8 +37,8 @@ bindsym $mod+k kill
 
 # start program launcher
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu='dmenu -i -fn "DejaVu Sans Mono" -nb "#1E1F1C"'
-bindsym $mod+d exec --no-startup-id /home/mateusz/work/foo/run.sh
-bindsym $mod+c exec --no-startup-id /home/mateusz/work/foo/calc.sh
+bindsym $mod+d exec --no-startup-id mdmenu-run
+bindsym $mod+c exec --no-startup-id mdmenu-ssh
 bindsym $mod+t exec --no-startup-id gnome-system-monitor
 
 ## Volume control
