--- a/i3/.i3/i3blocks.conf
+++ b/i3/.i3/i3blocks.conf
@@ -31,7 +31,7 @@ separator=false
 
 # Check for updates.
 [updates]
-label=[]
+label=:
 signal=10
 command=~/.i3/package-checker.sh
 interval=3600
@@ -49,14 +49,14 @@ command=~/.i3/wifi.sh
 # (defaults to 10 for 10%).
 ## -----------------------------
 [disk]
-label=[]
+label=:
 interval=1
 instance=/mnt/
 command=~/.i3/disk.sh
 
 # Displays song played by my music player.
 [mem-exp]
-label=[]
+label=:
 command=~/.i3/mem-info.sh
 interval=8
 
@@ -65,7 +65,7 @@ interval=8
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
 [cpu_usage]
-label=[]
+label=:
 #min_width=
 interval=8
 
@@ -75,7 +75,7 @@ interval=8
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
 [temperature]
-label=[]
+label=:
 interval=30
 
 # Volume indicator
@@ -84,7 +84,7 @@ interval=30
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-label=[]
+label=:
 instance=Master
 interval=60
 signal=10
@@ -114,6 +114,6 @@ command=~/.i3/volume.sh 5
 
 # Time
 [time]
-label=[]
+label=:
 command=date '+%Y-%m-%d %H:%M '
 interval=30
